k8s/ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrs-ingress-uat
  namespace: uat
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.hrs-uat.shop
      secretName: hrs-api-tls-cert
  rules:
    - host: api.hrs-uat.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hrs-gateway-uat-svc
                port:
                  number: 80
